test/checkpoint_parse/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    WS
    COLONPORT
    RULES
    COLONPROTO
    APOS
    RBRACE
    LBRACE

Grammar

Rule 0     S' -> lines
Rule 1     lines -> line
Rule 2     lines -> lines line
Rule 3     line -> error NL
Rule 4     empty -> <empty>
Rule 5     item -> WORD
Rule 6     optitem -> item
Rule 7     optitem -> empty
Rule 8     words -> WORD
Rule 9     words -> WORD words
Rule 10    begin_line -> LPAREN
Rule 11    usefull_line -> COLON ANYOBJ LPAREN ANY
Rule 12    usefull_line -> COLON SUPERANYOBJ LPAREN
Rule 13    usefull_line -> COLON SOFAWARE_GW_TYPES LPAREN
Rule 14    usefull_line -> COLON ATLAS_GATEWAY_PROPERTIES LPAREN
Rule 15    usefull_line -> COLON ATLAS_GENERAL_PROPERTIES LPAREN
Rule 16    usefull_line -> COLON POLICIES_COLLECTIONS LPAREN
Rule 17    usefull_line -> COLON WORD LPAREN SOFAWARE_GW_TYPES RPAREN
Rule 18    begin_net_obj -> COLON NETOBJ LPAREN
Rule 19    obj_name_line -> COLON LPAREN WORD
Rule 20    obj_name_line -> COLON LPAREN NUMBER WORD
Rule 21    ipaddr_line -> COLON IPADDR LPAREN IP_ADDR RPAREN
Rule 22    bogus_ip_line -> COLON BOGUS_IP LPAREN IP_ADDR RPAREN
Rule 23    type_line -> COLON TYPE LPAREN WORD RPAREN
Rule 24    netmask_line -> COLON NETMASK LPAREN IP_ADDR RPAREN
Rule 25    start_range -> COLON IPADDR_FIRST LPAREN IP_ADDR RPAREN
Rule 26    stop_range -> COLON IPADDR_LAST LPAREN IP_ADDR RPAREN
Rule 27    interface_begin_line -> COLON INTERFACES LPAREN
Rule 28    interface_index -> COLON IFINDEX LPAREN NUMBER RPAREN
Rule 29    interface_nameif -> COLON OFFICIALNAME LPAREN WORD RPAREN
Rule 30    servobj_begin_line -> COLON SERVICES LPAREN
Rule 31    service_port -> COLON WORD LPAREN NUMBER RPAREN
Rule 32    service_port -> COLON WORD LPAREN NUMBER WORD RPAREN
Rule 33    ref_object_begin -> COLON LPAREN REFERENCEOBJECT
Rule 34    attr_line -> COLON WORD
Rule 35    attr_line -> COLON WORD LPAREN WORD RPAREN
Rule 36    attr_line -> COLON WORD LPAREN ANY RPAREN
Rule 37    attr_line -> COLON LPAREN WORD RPAREN
Rule 38    attr_line -> COLON LPAREN RPAREN
Rule 39    attr_line -> COLON LPAREN ANY RPAREN
Rule 40    attr_line -> COLON OVERLAP_NAT_NETMASK LPAREN IP_ADDR RPAREN
Rule 41    attr_line -> COLON LPAREN NUMBER WORD RPAREN
Rule 42    attr_line -> COLON WORD LPAREN NUMBER WORD RPAREN
Rule 43    attr_line -> COLON VALID_IPADDR LPAREN IP_ADDR RPAREN
Rule 44    attr_line -> COLON VERSION LPAREN RPAREN
Rule 45    attr_line -> COLON VERSION LPAREN IP_ADDR RPAREN
Rule 46    attr_line -> COLON VERSION LPAREN NUMBER RPAREN
Rule 47    attr_line -> COLON VERSION LPAREN NUMBER WORD RPAREN
Rule 48    attr_line -> COLON VERSION LPAREN WORD RPAREN
Rule 49    attr_line -> COLON NETOBJ
Rule 50    attr_line -> COLON VERSIONS LPAREN RPAREN
Rule 51    attr_line -> COLON GX_VERSION LPAREN WORD RPAREN
Rule 52    attr_line -> COLON GX_VERSION LPAREN NUMBER RPAREN
Rule 53    attr_line -> COLON GX_VERSION LPAREN NUMBER WORD RPAREN
Rule 54    attr_line -> COLON WORD LPAREN RPAREN
Rule 55    attr_line -> COLON LPAREN NUMBER RPAREN
Rule 56    attr_line -> COLON WORD LPAREN POLICIES_COLLECTIONS RPAREN
Rule 57    attr_line -> COLON SERVOBJ
Rule 58    attr_line -> COLON WORD NUMBER
Rule 59    attr_line -> COLON ACTION LPAREN RPAREN
Rule 60    attr_line -> COLON WORD LPAREN SERVICES RPAREN
Rule 61    attr_line -> COLON TYPE LPAREN DST RPAREN
Rule 62    attr_line -> COLON TYPE LPAREN SRC RPAREN
Rule 63    attr_line -> COLON WORD LPAREN SRC RPAREN
Rule 64    attr_line -> COLON WORD LPAREN DST RPAREN
Rule 65    attr_line -> COLON EDGES LPAREN RPAREN
Rule 66    attr_line -> COLON IPADDR LPAREN RPAREN
Rule 67    attr_line -> COLON NETMASK LPAREN RPAREN
Rule 68    attr_line -> COLON WORD LPAREN NETACCESS RPAREN
Rule 69    attr_line -> COLON WORD LPAREN NETOBJ RPAREN
Rule 70    attr_line -> COLON INTERFACES LPAREN RPAREN
Rule 71    attr_line -> COLON IP_ADDRESS LPAREN IP_ADDR RPAREN
Rule 72    attr_line -> COLON NETWORK_PUBLISH_MASK LPAREN IP_ADDR RPAREN
Rule 73    attr_line -> COLON TYPE LPAREN NUMBER WORD RPAREN
Rule 74    end_obj_line -> RPAREN
Rule 75    begin_rules_line -> COLON RULEBASE LPAREN WORD
Rule 76    new_rule_line -> COLON RULE LPAREN
Rule 77    begin_action -> COLON ACTION LPAREN
Rule 78    begin_dst -> COLON DST LPAREN
Rule 79    begin_install -> COLON INSTALL LPAREN
Rule 80    begin_src -> COLON SRC LPAREN
Rule 81    exception_line -> COLON EXCEPTION LPAREN REFERENCEOBJECT
Rule 82    sub_obj_attr -> COLON LPAREN
Rule 83    sub_obj_attr -> COLON WORD LPAREN
Rule 84    sub_obj_attr -> COLON WORD LPAREN WORD
Rule 85    sub_obj_attr -> COLON WORD LPAREN REFERENCEOBJECT
Rule 86    sub_obj_attr -> COLON NETACCESS LPAREN
Rule 87    sub_obj_attr -> COLON EDGES LPAREN
Rule 88    sub_obj_attr -> COLON RESOURCE LPAREN
Rule 89    sub_obj_attr -> COLON NUMBER LPAREN
Rule 90    sub_obj_attr -> COLON RESOURCE LPAREN REFERENCEOBJECT
Rule 91    sub_obj_attr -> COLON NUMBER LPAREN REFERENCEOBJECT
Rule 92    sub_obj_attr -> COLON VERSIONS LPAREN
Rule 93    sub_obj_attr -> COLON LPAREN ANY
Rule 94    sub_obj_attr -> COLON LPAREN IPADDR
Rule 95    sub_obj_attr -> COLON LPAREN DST
Rule 96    sub_obj_attr -> COLON LPAREN SRC
Rule 97    sub_obj_attr -> COLON LPAREN IP_ADDR
Rule 98    sub_obj_attr -> COLON PORTALS LPAREN
Rule 99    line -> begin_line NL
Rule 100   line -> begin_net_obj NL
Rule 101   line -> obj_name_line NL
Rule 102   line -> ipaddr_line NL
Rule 103   line -> type_line NL
Rule 104   line -> netmask_line NL
Rule 105   line -> start_range NL
Rule 106   line -> stop_range NL
Rule 107   line -> interface_index NL
Rule 108   line -> interface_nameif NL
Rule 109   line -> interface_begin_line NL
Rule 110   line -> end_obj_line NL
Rule 111   line -> sub_obj_attr NL
Rule 112   line -> attr_line NL
Rule 113   line -> usefull_line NL
Rule 114   line -> bogus_ip_line NL
Rule 115   line -> service_port NL
Rule 116   line -> servobj_begin_line NL
Rule 117   line -> begin_rules_line NL
Rule 118   line -> begin_dst NL
Rule 119   line -> begin_action NL
Rule 120   line -> begin_src NL
Rule 121   line -> begin_install NL
Rule 122   line -> exception_line NL
Rule 123   line -> ref_object_begin NL
Rule 124   line -> new_rule_line NL
Rule 125   line -> NL

Terminals, with rules where they appear

ACTION               : 59 77
ANY                  : 11 36 39 93
ANYOBJ               : 11
APOS                 : 
ATLAS_GATEWAY_PROPERTIES : 14
ATLAS_GENERAL_PROPERTIES : 15
BOGUS_IP             : 22
COLON                : 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
COLONPORT            : 
COLONPROTO           : 
DST                  : 61 64 78 95
EDGES                : 65 87
EXCEPTION            : 81
GX_VERSION           : 51 52 53
IFINDEX              : 28
INSTALL              : 79
INTERFACES           : 27 70
IPADDR               : 21 66 94
IPADDR_FIRST         : 25
IPADDR_LAST          : 26
IP_ADDR              : 21 22 24 25 26 40 43 45 71 72 97
IP_ADDRESS           : 71
LBRACE               : 
LPAREN               : 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 35 36 37 38 39 40 41 42 43 44 45 46 47 48 50 51 52 53 54 55 56 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
NETACCESS            : 68 86
NETMASK              : 24 67
NETOBJ               : 18 49 69
NETWORK_PUBLISH_MASK : 72
NL                   : 3 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125
NUMBER               : 20 28 31 32 41 42 46 47 52 53 55 58 73 89 91
OFFICIALNAME         : 29
OVERLAP_NAT_NETMASK  : 40
POLICIES_COLLECTIONS : 16 56
PORTALS              : 98
RBRACE               : 
REFERENCEOBJECT      : 33 81 85 90 91
RESOURCE             : 88 90
RPAREN               : 17 21 22 23 24 25 26 28 29 31 32 35 36 37 38 39 40 41 42 43 44 45 46 47 48 50 51 52 53 54 55 56 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
RULE                 : 76
RULEBASE             : 75
RULES                : 
SERVICES             : 30 60
SERVOBJ              : 57
SOFAWARE_GW_TYPES    : 13 17
SRC                  : 62 63 80 96
SUPERANYOBJ          : 12
TYPE                 : 23 61 62 73
VALID_IPADDR         : 43
VERSION              : 44 45 46 47 48
VERSIONS             : 50 92
WORD                 : 5 8 9 17 19 20 23 29 31 32 32 34 35 35 36 37 41 42 42 47 48 51 53 54 56 58 60 63 64 68 69 73 75 83 84 84 85
WS                   : 
error                : 3

Nonterminals, with rules where they appear

attr_line            : 112
begin_action         : 119
begin_dst            : 118
begin_install        : 121
begin_line           : 99
begin_net_obj        : 100
begin_rules_line     : 117
begin_src            : 120
bogus_ip_line        : 114
empty                : 7
end_obj_line         : 110
exception_line       : 122
interface_begin_line : 109
interface_index      : 107
interface_nameif     : 108
ipaddr_line          : 102
item                 : 6
line                 : 1 2
lines                : 2 0
netmask_line         : 104
new_rule_line        : 124
obj_name_line        : 101
optitem              : 
ref_object_begin     : 123
service_port         : 115
servobj_begin_line   : 116
start_range          : 105
stop_range           : 106
sub_obj_attr         : 111
type_line            : 103
usefull_line         : 113
words                : 9

Parsing method: LALR

state 0

    (0) S' -> . lines
    (1) lines -> . line
    (2) lines -> . lines line
    (3) line -> . error NL
    (99) line -> . begin_line NL
    (100) line -> . begin_net_obj NL
    (101) line -> . obj_name_line NL
    (102) line -> . ipaddr_line NL
    (103) line -> . type_line NL
    (104) line -> . netmask_line NL
    (105) line -> . start_range NL
    (106) line -> . stop_range NL
    (107) line -> . interface_index NL
    (108) line -> . interface_nameif NL
    (109) line -> . interface_begin_line NL
    (110) line -> . end_obj_line NL
    (111) line -> . sub_obj_attr NL
    (112) line -> . attr_line NL
    (113) line -> . usefull_line NL
    (114) line -> . bogus_ip_line NL
    (115) line -> . service_port NL
    (116) line -> . servobj_begin_line NL
    (117) line -> . begin_rules_line NL
    (118) line -> . begin_dst NL
    (119) line -> . begin_action NL
    (120) line -> . begin_src NL
    (121) line -> . begin_install NL
    (122) line -> . exception_line NL
    (123) line -> . ref_object_begin NL
    (124) line -> . new_rule_line NL
    (125) line -> . NL
    (10) begin_line -> . LPAREN
    (18) begin_net_obj -> . COLON NETOBJ LPAREN
    (19) obj_name_line -> . COLON LPAREN WORD
    (20) obj_name_line -> . COLON LPAREN NUMBER WORD
    (21) ipaddr_line -> . COLON IPADDR LPAREN IP_ADDR RPAREN
    (23) type_line -> . COLON TYPE LPAREN WORD RPAREN
    (24) netmask_line -> . COLON NETMASK LPAREN IP_ADDR RPAREN
    (25) start_range -> . COLON IPADDR_FIRST LPAREN IP_ADDR RPAREN
    (26) stop_range -> . COLON IPADDR_LAST LPAREN IP_ADDR RPAREN
    (28) interface_index -> . COLON IFINDEX LPAREN NUMBER RPAREN
    (29) interface_nameif -> . COLON OFFICIALNAME LPAREN WORD RPAREN
    (27) interface_begin_line -> . COLON INTERFACES LPAREN
    (74) end_obj_line -> . RPAREN
    (82) sub_obj_attr -> . COLON LPAREN
    (83) sub_obj_attr -> . COLON WORD LPAREN
    (84) sub_obj_attr -> . COLON WORD LPAREN WORD
    (85) sub_obj_attr -> . COLON WORD LPAREN REFERENCEOBJECT
    (86) sub_obj_attr -> . COLON NETACCESS LPAREN
    (87) sub_obj_attr -> . COLON EDGES LPAREN
    (88) sub_obj_attr -> . COLON RESOURCE LPAREN
    (89) sub_obj_attr -> . COLON NUMBER LPAREN
    (90) sub_obj_attr -> . COLON RESOURCE LPAREN REFERENCEOBJECT
    (91) sub_obj_attr -> . COLON NUMBER LPAREN REFERENCEOBJECT
    (92) sub_obj_attr -> . COLON VERSIONS LPAREN
    (93) sub_obj_attr -> . COLON LPAREN ANY
    (94) sub_obj_attr -> . COLON LPAREN IPADDR
    (95) sub_obj_attr -> . COLON LPAREN DST
    (96) sub_obj_attr -> . COLON LPAREN SRC
    (97) sub_obj_attr -> . COLON LPAREN IP_ADDR
    (98) sub_obj_attr -> . COLON PORTALS LPAREN
    (34) attr_line -> . COLON WORD
    (35) attr_line -> . COLON WORD LPAREN WORD RPAREN
    (36) attr_line -> . COLON WORD LPAREN ANY RPAREN
    (37) attr_line -> . COLON LPAREN WORD RPAREN
    (38) attr_line -> . COLON LPAREN RPAREN
    (39) attr_line -> . COLON LPAREN ANY RPAREN
    (40) attr_line -> . COLON OVERLAP_NAT_NETMASK LPAREN IP_ADDR RPAREN
    (41) attr_line -> . COLON LPAREN NUMBER WORD RPAREN
    (42) attr_line -> . COLON WORD LPAREN NUMBER WORD RPAREN
    (43) attr_line -> . COLON VALID_IPADDR LPAREN IP_ADDR RPAREN
    (44) attr_line -> . COLON VERSION LPAREN RPAREN
    (45) attr_line -> . COLON VERSION LPAREN IP_ADDR RPAREN
    (46) attr_line -> . COLON VERSION LPAREN NUMBER RPAREN
    (47) attr_line -> . COLON VERSION LPAREN NUMBER WORD RPAREN
    (48) attr_line -> . COLON VERSION LPAREN WORD RPAREN
    (49) attr_line -> . COLON NETOBJ
    (50) attr_line -> . COLON VERSIONS LPAREN RPAREN
    (51) attr_line -> . COLON GX_VERSION LPAREN WORD RPAREN
    (52) attr_line -> . COLON GX_VERSION LPAREN NUMBER RPAREN
    (53) attr_line -> . COLON GX_VERSION LPAREN NUMBER WORD RPAREN
    (54) attr_line -> . COLON WORD LPAREN RPAREN
    (55) attr_line -> . COLON LPAREN NUMBER RPAREN
    (56) attr_line -> . COLON WORD LPAREN POLICIES_COLLECTIONS RPAREN
    (57) attr_line -> . COLON SERVOBJ
    (58) attr_line -> . COLON WORD NUMBER
    (59) attr_line -> . COLON ACTION LPAREN RPAREN
    (60) attr_line -> . COLON WORD LPAREN SERVICES RPAREN
    (61) attr_line -> . COLON TYPE LPAREN DST RPAREN
    (62) attr_line -> . COLON TYPE LPAREN SRC RPAREN
    (63) attr_line -> . COLON WORD LPAREN SRC RPAREN
    (64) attr_line -> . COLON WORD LPAREN DST RPAREN
    (65) attr_line -> . COLON EDGES LPAREN RPAREN
    (66) attr_line -> . COLON IPADDR LPAREN RPAREN
    (67) attr_line -> . COLON NETMASK LPAREN RPAREN
    (68) attr_line -> . COLON WORD LPAREN NETACCESS RPAREN
    (69) attr_line -> . COLON WORD LPAREN NETOBJ RPAREN
    (70) attr_line -> . COLON INTERFACES LPAREN RPAREN
    (71) attr_line -> . COLON IP_ADDRESS LPAREN IP_ADDR RPAREN
    (72) attr_line -> . COLON NETWORK_PUBLISH_MASK LPAREN IP_ADDR RPAREN
    (73) attr_line -> . COLON TYPE LPAREN NUMBER WORD RPAREN
    (11) usefull_line -> . COLON ANYOBJ LPAREN ANY
    (12) usefull_line -> . COLON SUPERANYOBJ LPAREN
    (13) usefull_line -> . COLON SOFAWARE_GW_TYPES LPAREN
    (14) usefull_line -> . COLON ATLAS_GATEWAY_PROPERTIES LPAREN
    (15) usefull_line -> . COLON ATLAS_GENERAL_PROPERTIES LPAREN
    (16) usefull_line -> . COLON POLICIES_COLLECTIONS LPAREN
    (17) usefull_line -> . COLON WORD LPAREN SOFAWARE_GW_TYPES RPAREN
    (22) bogus_ip_line -> . COLON BOGUS_IP LPAREN IP_ADDR RPAREN
    (31) service_port -> . COLON WORD LPAREN NUMBER RPAREN
    (32) service_port -> . COLON WORD LPAREN NUMBER WORD RPAREN
    (30) servobj_begin_line -> . COLON SERVICES LPAREN
    (75) begin_rules_line -> . COLON RULEBASE LPAREN WORD
    (78) begin_dst -> . COLON DST LPAREN
    (77) begin_action -> . COLON ACTION LPAREN
    (80) begin_src -> . COLON SRC LPAREN
    (79) begin_install -> . COLON INSTALL LPAREN
    (81) exception_line -> . COLON EXCEPTION LPAREN REFERENCEOBJECT
    (33) ref_object_begin -> . COLON LPAREN REFERENCEOBJECT
    (76) new_rule_line -> . COLON RULE LPAREN

    error           shift and go to state 32
    NL              shift and go to state 9
    LPAREN          shift and go to state 2
    COLON           shift and go to state 14
    RPAREN          shift and go to state 11

    bogus_ip_line                  shift and go to state 1
    end_obj_line                   shift and go to state 3
    ipaddr_line                    shift and go to state 4
    obj_name_line                  shift and go to state 5
    attr_line                      shift and go to state 6
    servobj_begin_line             shift and go to state 7
    start_range                    shift and go to state 8
    exception_line                 shift and go to state 10
    begin_dst                      shift and go to state 12
    netmask_line                   shift and go to state 13
    begin_src                      shift and go to state 15
    new_rule_line                  shift and go to state 16
    ref_object_begin               shift and go to state 17
    type_line                      shift and go to state 18
    begin_rules_line               shift and go to state 19
    usefull_line                   shift and go to state 20
    begin_net_obj                  shift and go to state 21
    interface_nameif               shift and go to state 22
    begin_line                     shift and go to state 23
    line                           shift and go to state 24
    stop_range                     shift and go to state 25
    sub_obj_attr                   shift and go to state 26
    interface_index                shift and go to state 27
    interface_begin_line           shift and go to state 28
    service_port                   shift and go to state 29
    lines                          shift and go to state 30
    begin_action                   shift and go to state 31
    begin_install                  shift and go to state 33

state 1

    (114) line -> bogus_ip_line . NL

    NL              shift and go to state 34


state 2

    (10) begin_line -> LPAREN .

    NL              reduce using rule 10 (begin_line -> LPAREN .)


state 3

    (110) line -> end_obj_line . NL

    NL              shift and go to state 35


state 4

    (102) line -> ipaddr_line . NL

    NL              shift and go to state 36


state 5

    (101) line -> obj_name_line . NL

    NL              shift and go to state 37


state 6

    (112) line -> attr_line . NL

    NL              shift and go to state 38


state 7

    (116) line -> servobj_begin_line . NL

    NL              shift and go to state 39


state 8

    (105) line -> start_range . NL

    NL              shift and go to state 40


state 9

    (125) line -> NL .

    error           reduce using rule 125 (line -> NL .)
    NL              reduce using rule 125 (line -> NL .)
    LPAREN          reduce using rule 125 (line -> NL .)
    COLON           reduce using rule 125 (line -> NL .)
    RPAREN          reduce using rule 125 (line -> NL .)
    $end            reduce using rule 125 (line -> NL .)


state 10

    (122) line -> exception_line . NL

    NL              shift and go to state 41


state 11

    (74) end_obj_line -> RPAREN .

    NL              reduce using rule 74 (end_obj_line -> RPAREN .)


state 12

    (118) line -> begin_dst . NL

    NL              shift and go to state 42


state 13

    (104) line -> netmask_line . NL

    NL              shift and go to state 43


state 14

    (18) begin_net_obj -> COLON . NETOBJ LPAREN
    (19) obj_name_line -> COLON . LPAREN WORD
    (20) obj_name_line -> COLON . LPAREN NUMBER WORD
    (21) ipaddr_line -> COLON . IPADDR LPAREN IP_ADDR RPAREN
    (23) type_line -> COLON . TYPE LPAREN WORD RPAREN
    (24) netmask_line -> COLON . NETMASK LPAREN IP_ADDR RPAREN
    (25) start_range -> COLON . IPADDR_FIRST LPAREN IP_ADDR RPAREN
    (26) stop_range -> COLON . IPADDR_LAST LPAREN IP_ADDR RPAREN
    (28) interface_index -> COLON . IFINDEX LPAREN NUMBER RPAREN
    (29) interface_nameif -> COLON . OFFICIALNAME LPAREN WORD RPAREN
    (27) interface_begin_line -> COLON . INTERFACES LPAREN
    (82) sub_obj_attr -> COLON . LPAREN
    (83) sub_obj_attr -> COLON . WORD LPAREN
    (84) sub_obj_attr -> COLON . WORD LPAREN WORD
    (85) sub_obj_attr -> COLON . WORD LPAREN REFERENCEOBJECT
    (86) sub_obj_attr -> COLON . NETACCESS LPAREN
    (87) sub_obj_attr -> COLON . EDGES LPAREN
    (88) sub_obj_attr -> COLON . RESOURCE LPAREN
    (89) sub_obj_attr -> COLON . NUMBER LPAREN
    (90) sub_obj_attr -> COLON . RESOURCE LPAREN REFERENCEOBJECT
    (91) sub_obj_attr -> COLON . NUMBER LPAREN REFERENCEOBJECT
    (92) sub_obj_attr -> COLON . VERSIONS LPAREN
    (93) sub_obj_attr -> COLON . LPAREN ANY
    (94) sub_obj_attr -> COLON . LPAREN IPADDR
    (95) sub_obj_attr -> COLON . LPAREN DST
    (96) sub_obj_attr -> COLON . LPAREN SRC
    (97) sub_obj_attr -> COLON . LPAREN IP_ADDR
    (98) sub_obj_attr -> COLON . PORTALS LPAREN
    (34) attr_line -> COLON . WORD
    (35) attr_line -> COLON . WORD LPAREN WORD RPAREN
    (36) attr_line -> COLON . WORD LPAREN ANY RPAREN
    (37) attr_line -> COLON . LPAREN WORD RPAREN
    (38) attr_line -> COLON . LPAREN RPAREN
    (39) attr_line -> COLON . LPAREN ANY RPAREN
    (40) attr_line -> COLON . OVERLAP_NAT_NETMASK LPAREN IP_ADDR RPAREN
    (41) attr_line -> COLON . LPAREN NUMBER WORD RPAREN
    (42) attr_line -> COLON . WORD LPAREN NUMBER WORD RPAREN
    (43) attr_line -> COLON . VALID_IPADDR LPAREN IP_ADDR RPAREN
    (44) attr_line -> COLON . VERSION LPAREN RPAREN
    (45) attr_line -> COLON . VERSION LPAREN IP_ADDR RPAREN
    (46) attr_line -> COLON . VERSION LPAREN NUMBER RPAREN
    (47) attr_line -> COLON . VERSION LPAREN NUMBER WORD RPAREN
    (48) attr_line -> COLON . VERSION LPAREN WORD RPAREN
    (49) attr_line -> COLON . NETOBJ
    (50) attr_line -> COLON . VERSIONS LPAREN RPAREN
    (51) attr_line -> COLON . GX_VERSION LPAREN WORD RPAREN
    (52) attr_line -> COLON . GX_VERSION LPAREN NUMBER RPAREN
    (53) attr_line -> COLON . GX_VERSION LPAREN NUMBER WORD RPAREN
    (54) attr_line -> COLON . WORD LPAREN RPAREN
    (55) attr_line -> COLON . LPAREN NUMBER RPAREN
    (56) attr_line -> COLON . WORD LPAREN POLICIES_COLLECTIONS RPAREN
    (57) attr_line -> COLON . SERVOBJ
    (58) attr_line -> COLON . WORD NUMBER
    (59) attr_line -> COLON . ACTION LPAREN RPAREN
    (60) attr_line -> COLON . WORD LPAREN SERVICES RPAREN
    (61) attr_line -> COLON . TYPE LPAREN DST RPAREN
    (62) attr_line -> COLON . TYPE LPAREN SRC RPAREN
    (63) attr_line -> COLON . WORD LPAREN SRC RPAREN
    (64) attr_line -> COLON . WORD LPAREN DST RPAREN
    (65) attr_line -> COLON . EDGES LPAREN RPAREN
    (66) attr_line -> COLON . IPADDR LPAREN RPAREN
    (67) attr_line -> COLON . NETMASK LPAREN RPAREN
    (68) attr_line -> COLON . WORD LPAREN NETACCESS RPAREN
    (69) attr_line -> COLON . WORD LPAREN NETOBJ RPAREN
    (70) attr_line -> COLON . INTERFACES LPAREN RPAREN
    (71) attr_line -> COLON . IP_ADDRESS LPAREN IP_ADDR RPAREN
    (72) attr_line -> COLON . NETWORK_PUBLISH_MASK LPAREN IP_ADDR RPAREN
    (73) attr_line -> COLON . TYPE LPAREN NUMBER WORD RPAREN
    (11) usefull_line -> COLON . ANYOBJ LPAREN ANY
    (12) usefull_line -> COLON . SUPERANYOBJ LPAREN
    (13) usefull_line -> COLON . SOFAWARE_GW_TYPES LPAREN
    (14) usefull_line -> COLON . ATLAS_GATEWAY_PROPERTIES LPAREN
    (15) usefull_line -> COLON . ATLAS_GENERAL_PROPERTIES LPAREN
    (16) usefull_line -> COLON . POLICIES_COLLECTIONS LPAREN
    (17) usefull_line -> COLON . WORD LPAREN SOFAWARE_GW_TYPES RPAREN
    (22) bogus_ip_line -> COLON . BOGUS_IP LPAREN IP_ADDR RPAREN
    (31) service_port -> COLON . WORD LPAREN NUMBER RPAREN
    (32) service_port -> COLON . WORD LPAREN NUMBER WORD RPAREN
    (30) servobj_begin_line -> COLON . SERVICES LPAREN
    (75) begin_rules_line -> COLON . RULEBASE LPAREN WORD
    (78) begin_dst -> COLON . DST LPAREN
    (77) begin_action -> COLON . ACTION LPAREN
    (80) begin_src -> COLON . SRC LPAREN
    (79) begin_install -> COLON . INSTALL LPAREN
    (81) exception_line -> COLON . EXCEPTION LPAREN REFERENCEOBJECT
    (33) ref_object_begin -> COLON . LPAREN REFERENCEOBJECT
    (76) new_rule_line -> COLON . RULE LPAREN

    NETOBJ          shift and go to state 77
    LPAREN          shift and go to state 71
    IPADDR          shift and go to state 78
    TYPE            shift and go to state 82
    NETMASK         shift and go to state 60
    IPADDR_FIRST    shift and go to state 66
    IPADDR_LAST     shift and go to state 81
    IFINDEX         shift and go to state 52
    OFFICIALNAME    shift and go to state 74
    INTERFACES      shift and go to state 67
    WORD            shift and go to state 54
    NETACCESS       shift and go to state 79
    EDGES           shift and go to state 80
    RESOURCE        shift and go to state 72
    NUMBER          shift and go to state 47
    VERSIONS        shift and go to state 56
    PORTALS         shift and go to state 75
    OVERLAP_NAT_NETMASK shift and go to state 53
    VALID_IPADDR    shift and go to state 61
    VERSION         shift and go to state 70
    GX_VERSION      shift and go to state 55
    SERVOBJ         shift and go to state 68
    ACTION          shift and go to state 69
    IP_ADDRESS      shift and go to state 64
    NETWORK_PUBLISH_MASK shift and go to state 59
    ANYOBJ          shift and go to state 73
    SUPERANYOBJ     shift and go to state 63
    SOFAWARE_GW_TYPES shift and go to state 46
    ATLAS_GATEWAY_PROPERTIES shift and go to state 48
    ATLAS_GENERAL_PROPERTIES shift and go to state 76
    POLICIES_COLLECTIONS shift and go to state 62
    BOGUS_IP        shift and go to state 50
    SERVICES        shift and go to state 49
    RULEBASE        shift and go to state 57
    DST             shift and go to state 65
    SRC             shift and go to state 45
    INSTALL         shift and go to state 51
    EXCEPTION       shift and go to state 44
    RULE            shift and go to state 58


state 15

    (120) line -> begin_src . NL

    NL              shift and go to state 83


state 16

    (124) line -> new_rule_line . NL

    NL              shift and go to state 84


state 17

    (123) line -> ref_object_begin . NL

    NL              shift and go to state 85


state 18

    (103) line -> type_line . NL

    NL              shift and go to state 86


state 19

    (117) line -> begin_rules_line . NL

    NL              shift and go to state 87


state 20

    (113) line -> usefull_line . NL

    NL              shift and go to state 88


state 21

    (100) line -> begin_net_obj . NL

    NL              shift and go to state 89


state 22

    (108) line -> interface_nameif . NL

    NL              shift and go to state 90


state 23

    (99) line -> begin_line . NL

    NL              shift and go to state 91


state 24

    (1) lines -> line .

    error           reduce using rule 1 (lines -> line .)
    NL              reduce using rule 1 (lines -> line .)
    LPAREN          reduce using rule 1 (lines -> line .)
    COLON           reduce using rule 1 (lines -> line .)
    RPAREN          reduce using rule 1 (lines -> line .)
    $end            reduce using rule 1 (lines -> line .)


state 25

    (106) line -> stop_range . NL

    NL              shift and go to state 92


state 26

    (111) line -> sub_obj_attr . NL

    NL              shift and go to state 93


state 27

    (107) line -> interface_index . NL

    NL              shift and go to state 94


state 28

    (109) line -> interface_begin_line . NL

    NL              shift and go to state 95


state 29

    (115) line -> service_port . NL

    NL              shift and go to state 96


state 30
